<resources>
    <string name="app_name">תנו חיוך :)</string>
    <string name="difficulty">גובה</string>
    <string name="blueBall">כדור כחול</string>
    <string name="orangeBall">כדור כתום</string>
    <string name="back">חזרה</string>
    <string name="start_exercise">התחל תרגיל</string>
    <string name="settings">הגדרות</string>
    <string name="history">היסטוריה</string>
    <string name="repetitions">חזרות</string>
    <string name="finish">סיום</string>
    <string name="date">תאריך:</string>
    <string name="time">שעה:</string>
    <string name="exercise_kind">סוג תרגיל:</string>
    <string name="duration">משך חזרה :</string>
    <string name="durationTraining">משך האימון :</string>
    <string name="diff_lvl">רמת קושי:</string>
    <string name="num_of_reps">מספר חזרות</string>
    <string name="duration_sec">מספר השניות</string>
    <string name="duration_rep">משך חזרה</string>
    <string name="save">שמור</string>
    <string name="good_job">עבודה טובה!</string>
    <string name="breath">צריך לסדר את המעמד...</string>

    <string-array name="feedbackDown1">
        <item>מדהים!</item>
        <item>לא לשכוח לקחת הפסקות מידי פעם:)</item>
        <item>רק עוד קצת לאימון!</item>
        <item>עבודה טובה!</item>
        <item>כל הכבוד!</item>
    </string-array>

    <string-array name="feedbackDown2">
        <item>קצת יותר!</item>
        <item>שווה לנסות!</item>
        <item>אפשר להצליח!</item>
    </string-array>
    <string-array name="feedbackUp">
        <item>להשאיר את הכדור!</item>
    </string-array>

    <string-array name="feedbackAfterUp">
        <item>סיימת חזרה…</item>
    </string-array>

    <string-array name="feedbackFinish">
        <item>סיימת את האימון בהצלחה!</item>
    </string-array>

    <string-array name="feedbackStart">
        <item>אפשר להתחיל באימון</item>
    </string-array>

</resources>