<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="milbatproj.magdad.magdadmilbat.MainActivity">

    <Button
        android:id="@+id/btnStartExercise"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/start_exercise"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/history"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/settings"
        android:textSize="30dp" />
</LinearLayout>